# gcm-hackathon-portal

./: .gitignore  README.md  docker-compose.yml
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  task.yml
.github/workflows/: cd.yaml  ci.yaml  preview.yaml
backend/: README.md  main.py  package.json  pnpm-lock.yaml  pyproject.toml
backend/handlers/: auth.py  participant.py
backend/middlewares/: auth.py
backend/models/: hackathon.py  hackathon_user.py  team.py  team_invitation.py  team_join_request.py  team_member.py  track.py  user.py
backend/rest/: auth.rest  system.rest
backend/routes/: auth.py  hackathon.py  participant.py
backend/scripts/: migrate_users.py
backend/utils/: auth.py  db.py  email.py  env.py  redis.py
frontend/: package-lock.json  package.json  pnpm-lock.yaml  proxy.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/auth/logout/: route.ts
frontend/app/api/auth/request-otp/: route.ts
frontend/app/api/auth/verify-otp/: route.ts
frontend/app/auth/: page.tsx
frontend/app/home/: page.tsx
frontend/components/: logout-button.tsx
frontend/lib/: auth.ts
