[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.0",
    "httpx>=0.28.1",
    "python-dotenv>=1.0.1",
    "pydantic[email]>=2.11.4",
    "pyjwt>=2.10.1",
    "pymongo>=4.16.0",
    "redis>=7.4.0",
    "uvicorn>=0.44.0",
]
