[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.138.0",
    "httpx>=0.28.1",
    "python-dotenv>=1.2.2",
    "pydantic[email]>=2.13.4",
    "pyjwt==2.13.0",
    "pymongo>=4.17.0",
    "redis>=8.0.0",
    "uvicorn>=0.49.0",
    "uuid6>=2025.0.1",
]
